--- a/GameShop/GameShop/Web.config
+++ b/GameShop/GameShop/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Дополнительные сведения о настройке приложения ASP.NET см. по адресу:
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -8,6 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="GameShopContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GameShopContext-20161126211121; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GameShopContext-20161126211121.mdf"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
