--- a/GameShop/GameShop/bin/GameShop.dll.config
+++ b/GameShop/GameShop/bin/GameShop.dll.config
@@ -20,6 +20,9 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" />
+    </authentication>
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <runtime>
