Добавил пользователю Email. Добавил проверку Login и Email на наличие в базе при регистрации

--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -143,6 +143,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611271003253_InitialCreate.cs" />
+    <Compile Include="Migrations\201611271003253_InitialCreate.Designer.cs">
+      <DependentUpon>201611271003253_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201611271033381_Migration1.cs" />
+    <Compile Include="Migrations\201611271033381_Migration1.Designer.cs">
+      <DependentUpon>201611271033381_Migration1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Game.cs" />
@@ -220,6 +229,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201611271003253_InitialCreate.resx">
+      <DependentUpon>201611271003253_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611271033381_Migration1.resx">
+      <DependentUpon>201611271033381_Migration1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
