--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -149,21 +149,21 @@
     <Compile Include="Migrations\201611271003253_InitialCreate.Designer.cs">
       <DependentUpon>201611271003253_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201611271033381_Migration1.cs" />
-    <Compile Include="Migrations\201611271033381_Migration1.Designer.cs">
-      <DependentUpon>201611271033381_Migration1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201611292040488_Migration2.cs" />
-    <Compile Include="Migrations\201611292040488_Migration2.Designer.cs">
-      <DependentUpon>201611292040488_Migration2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201611301139073_Migration3.cs" />
-    <Compile Include="Migrations\201611301139073_Migration3.Designer.cs">
-      <DependentUpon>201611301139073_Migration3.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\201612011147587_Migr4.cs" />
     <Compile Include="Migrations\201612011147587_Migr4.Designer.cs">
       <DependentUpon>201612011147587_Migr4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612021126458_Migr5.cs" />
+    <Compile Include="Migrations\201612021126458_Migr5.Designer.cs">
+      <DependentUpon>201612021126458_Migr5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612021207043_Migr6.cs" />
+    <Compile Include="Migrations\201612021207043_Migr6.Designer.cs">
+      <DependentUpon>201612021207043_Migr6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612022011128_Migr7.cs" />
+    <Compile Include="Migrations\201612022011128_Migr7.Designer.cs">
+      <DependentUpon>201612022011128_Migr7.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
@@ -216,6 +216,7 @@
     <Content Include="Views\Games\Details.cshtml" />
     <Content Include="Views\Games\Edit.cshtml" />
     <Content Include="Views\Games\Index.cshtml" />
+    <Content Include="Views\Orders\Cart.cshtml" />
     <Content Include="Views\Orders\Create.cshtml" />
     <Content Include="Views\Orders\Delete.cshtml" />
     <Content Include="Views\Orders\Details.cshtml" />
@@ -257,17 +258,17 @@
     <EmbeddedResource Include="Migrations\201611271003253_InitialCreate.resx">
       <DependentUpon>201611271003253_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201611271033381_Migration1.resx">
-      <DependentUpon>201611271033381_Migration1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201611292040488_Migration2.resx">
-      <DependentUpon>201611292040488_Migration2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201611301139073_Migration3.resx">
-      <DependentUpon>201611301139073_Migration3.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612011147587_Migr4.resx">
       <DependentUpon>201612011147587_Migr4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612021126458_Migr5.resx">
+      <DependentUpon>201612021126458_Migr5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612021207043_Migr6.resx">
+      <DependentUpon>201612021207043_Migr6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612022011128_Migr7.resx">
+      <DependentUpon>201612022011128_Migr7.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
