--- a/GameShop/GameShop/Web.config
+++ b/GameShop/GameShop/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Дополнительные сведения о настройке приложения ASP.NET см. по адресу:
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GameShopContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GameShopContext-20161126211121; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GameShopContext-20161126211121.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="GameShopContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GameShopContext-20161126211121; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GameShopContext-20161126211121.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,6 +23,11 @@
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
     <httpRuntime targetFramework="4.5.2" />
+    <roleManager enabled="true" defaultProvider="MyRoleProvider">
+      <providers>
+        <add name="MyRoleProvider" type="GameShop.Providers.CustomRoleProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
