--- a/GameShop/GameShop/packages.config
+++ b/GameShop/GameShop/packages.config
@@ -7,6 +7,8 @@
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Providers" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
