--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -175,6 +175,10 @@
     <Compile Include="Migrations\201612051436226_Ivan2.Designer.cs">
       <DependentUpon>201612051436226_Ivan2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612102335551_modifyGameModel.cs" />
+    <Compile Include="Migrations\201612102335551_modifyGameModel.Designer.cs">
+      <DependentUpon>201612102335551_modifyGameModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -255,7 +259,6 @@
     <Content Include="Views\GameComments\Index.cshtml" />
     <Content Include="Views\GameComments\Edit.cshtml" />
     <Content Include="Views\Account\Admin.cshtml" />
-    <Content Include="Views\Games\Upload.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -281,6 +284,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612051436226_Ivan2.resx">
       <DependentUpon>201612051436226_Ivan2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612102335551_modifyGameModel.resx">
+      <DependentUpon>201612102335551_modifyGameModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
