--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -254,7 +254,6 @@
     <Content Include="Views\Orders\Index.cshtml" />
     <Content Include="Views\Categories\Create.cshtml" />
     <Content Include="Views\Categories\Delete.cshtml" />
-    <Content Include="Views\Categories\Details.cshtml" />
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
@@ -284,6 +283,7 @@
     <Content Include="Views\NewsFeeds\Details.cshtml" />
     <Content Include="Views\NewsFeeds\Edit.cshtml" />
     <Content Include="Views\NewsFeeds\Index.cshtml" />
+    <Content Include="Views\Games\Bestseller.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
